<resources>
    <string name="app_name">LoginTutorial</string>
    <string name="register_form_title">Registre-se</string>
    <string name="register_username_hint">Nome de usuario</string>
    <string name="register_cellNumber_hint">Nr de celular</string>
    <string name="register_password_hint">Senha</string>
    <string name="register_button_text">Registrar</string>
    <string name="login_redirect_text">Já possui uma conta? Login</string>
    <string name="login_button_text">Login</string>
    <string name="login_form_title">Login</string>
    <string name="alterar_senha">Alterar Senha</string>
    <string name="nova_senha">Nova senha</string>
    <string name="alterar">Alterar</string>
    <string name="verifica_o">Verificação</string>
    <string name="verification_message">Enviamos um código de verificação para o nr:</string>
    <string name="number">number</string>
    <string name="code_hint">Digite o código enviado</string>
    <string name="verificar">Verificar</string>
    <string name="login">Login</string>
    <string name="register_redirect_text">Não possui uma conta? Registre-se</string>
    <string name="register_password_conf_hint">Confirme a senha</string>
    <string name="sucesso">Sucesso</string>
    <string name="mensagem">mensagem</string>
    <string name="esqueceu_a_senha">Esqueceu a senha?</string>
    <string name="username_hint">Nome de usuário</string>
    <string name="proximo">Proximo</string>
    <string name="logout_button_text">Logout</string>
    <string name="user_label">User:</string>
    <string name="token_label">Token:</string>
    <string name="capcha_label">Não sou um robô</string>
</resources>