<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pagebkg"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".SignUpActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        android:elevation="20dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp"
            android:background="@drawable/custom_edittext">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_form_title"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/lavender"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/edit_username"
                android:background="@drawable/custom_edittext"
                android:layout_marginTop="40dp"
                android:padding="8dp"
                android:hint="@string/register_username_hint"
                android:drawableStart="@drawable/baseline_person_24"
                android:drawablePadding="8dp"
                android:textColor="@color/black"
                android:importantForAutofill="no"
                android:inputType="text" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/edit_cellNumber"
                android:background="@drawable/custom_edittext"
                android:layout_marginTop="40dp"
                android:padding="8dp"
                android:hint="@string/register_cellNumber_hint"
                android:drawableStart="@drawable/baseline_phone_24"
                android:drawablePadding="8dp"
                android:inputType="phone"
                android:textColor="@color/black"
                android:importantForAutofill="no" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/edit_password"
                android:background="@drawable/custom_edittext"
                android:layout_marginTop="40dp"
                android:padding="8dp"
                android:hint="@string/register_password_hint"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="8dp"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:importantForAutofill="no" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/edit_password_confirm"
                android:background="@drawable/custom_edittext"
                android:layout_marginTop="40dp"
                android:padding="8dp"
                android:hint="@string/register_password_conf_hint"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="8dp"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:importantForAutofill="no" />

            <Button
                android:id="@+id/bt_register"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="30sp"
                android:backgroundTint="@color/lavender"
                android:background="@drawable/custom_edittext"
                android:textColor="@color/white"
                android:text="@string/register_button_text"
                android:textSize="18sp"
                app:cornerRadius="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/loginRedirectText"
                android:text="@string/login_redirect_text"
                android:layout_gravity="center"
                android:padding="8dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/lavender"
                android:textSize="18sp"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>