<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pagebkg"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".UsernameCheck">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        android:elevation="20dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp"
            android:background="@drawable/custom_edittext">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alterar_senha"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/lavender"/>


            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/edit_username"
                android:background="@drawable/custom_edittext"
                android:layout_marginTop="40dp"
                android:padding="8dp"
                android:hint="@string/username_hint"
                android:drawableStart="@drawable/baseline_person_24"
                android:drawablePadding="8dp"
                android:inputType="text"
                android:textColor="@color/black"
                android:importantForAutofill="no" />

            <Button
                android:id="@+id/bt_redirect_verify"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="30sp"
                android:backgroundTint="@color/lavender"
                android:text="@string/proximo"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:background="@drawable/custom_edittext"
                app:cornerRadius="20dp" />
            <Button
                android:id="@+id/bt_back_login"
                android:background="@drawable/custom_edittext"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10sp"
                android:backgroundTint="@color/white"
                android:textColor="@color/lavender"
                android:text="@string/login"
                android:textSize="18sp"
                app:cornerRadius="20dp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>