<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pagebkg"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".SuccessMessage">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        android:elevation="20dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp"
            android:background="@drawable/custom_edittext">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sucesso"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/lavender"/>

            <TextView
                android:layout_width="match_parent"
                android:id="@+id/message"
                android:layout_height="wrap_content"
                android:text="@string/mensagem"
                android:textSize="20sp"
                android:layout_marginTop="20sp"
                android:textAlignment="center" />


            <Button
                android:id="@+id/bt_redirect_login"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="30sp"
                android:backgroundTint="@color/lavender"
                android:text="@string/login"
                android:textColor="@color/white"
                android:background="@drawable/custom_edittext"
                android:textSize="18sp"
                app:cornerRadius="20dp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>